--- a/src/app/utils/app-switcher/app-switcher.component.html
+++ b/src/app/utils/app-switcher/app-switcher.component.html
@@ -1,5 +1,5 @@
 <!-- <div [@toggleOverlay]="state" class="overlay" (click)="onCancel()"></div> -->
-<div class="app-switcher-window d-flex flex-column justify-content-start align-items-center" odpClickOutside (outside)="onCancel()">
+<div class="app-switcher-window border bg-white position-absolute d-flex flex-column justify-content-start align-items-center" odpClickOutside (outside)="onCancel()">
   <div class="d-flex align-items-center pt-3 pb-2 position-relative w-100 px-3">
     <!-- <div class="active-app d-flex align-items-center hover position-absolute" (click)="onCancel()">
       <div class="app-thumbnail d-flex align-items-center justify-content-center hover" [ngStyle]="{ 'background-color': activeApp.bg }">
