--- a/src/app/home/control-panel/user/bulk-import-status/bulk-import-status.component.html
+++ b/src/app/home/control-panel/user/bulk-import-status/bulk-import-status.component.html
@@ -13,9 +13,9 @@
     </div>
     <div class="user-list w-100 px-3 pt-3">
         <div class="grid-container">
-            <ag-grid-angular #agGrid *ngIf="dataSource" class="card-container ag-theme-balham ag-grid-container"
+            <ag-grid-angular #agGrid *ngIf="columnDefs && dataSource" class="card-container ag-theme-balham ag-grid-container"
                 [gridOptions]="gridOptions" [columnDefs]="columnDefs" [datasource]="dataSource" rowModelType="infinite"
-                [rowHeight]="32" cacheBlockSize="30">
+                [rowHeight]="40" cacheBlockSize="30">
             </ag-grid-angular>
         </div>
     </div>
