--- a/src/app/utils/search-box/search-box.component.html
+++ b/src/app/utils/search-box/search-box.component.html
@@ -4,7 +4,7 @@
     odpClickOutside (outside)="open || searchTerm ? '': openSearchBox=false">
     <input type="text" name="searchTerm" id="searchTerm" maxlength="40" #searchInput [ngModel]="searchTerm"
       (ngModelChange)="onChange($event)" (keyup.enter)="onEnterKey($event)" (keyup.backspace)="onBackspaceKey($event)"
-      (keydown.control.backspace)="onCtrlBackspace($event)" (focus)="onFocus($event)" autocomplete="off"
+      (keydown.control.backspace)="onCtrlBackspace($event)" (focus)="onFocus($event)" autocomplete="disabled"
       (blur)="onBlur($event)" class="form-control" [ngClass]="{'ignore-outside': ignoreOutside}" odpAutoFocus>
     <div *ngIf="!searchInput.value" [@slide]="slideState" class="position-absolute text-muted"
       [ngClass]="{'ignore-outside': ignoreOutside}" (click)="searchInput.focus()">
@@ -15,10 +15,13 @@
     <span #infoTooltip="ngbTooltip" *ngIf="!searchInput.value"
       class="info fa fa-info-circle text-muted position-absolute high-zIndex" [ngbTooltip]="info" container="body"
       [placement]="toolTipDirection">&nbsp;</span>
-    <span *ngIf="searchInput.value" class="fa fa-times-circle text-danger position-absolute hover high-zIndex ignore-outside"
-      (click)="clear();searchInput.focus()" ngbTooltip="Clear Search" container="body" [placement]="toolTipDirection"></span>
+    <span *ngIf="searchInput.value"
+      class="fa fa-times-circle text-danger position-absolute hover high-zIndex ignore-outside"
+      (click)="clear();searchInput.focus()" ngbTooltip="Clear Search" container="body"
+      [placement]="toolTipDirection"></span>
   </div>
-  <button *ngIf="!openSearchBox" type="button" class="btn btn-white d-flex align-items-center border ignore-outside" (click)="openSearchBox=true">
+  <button *ngIf="!openSearchBox" type="button" class="btn btn-white d-flex align-items-center border ignore-outside"
+    (click)="openSearchBox=true">
     <span class="dsi dsi-search text-secondary ignore-outside"></span>
   </button>
 </div>
