--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -9,7 +9,7 @@ $white: #FFFFFF !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #efefef !default;
 $gray-300: #DFE1E2 !default;
-$gray-400: #ccc !default;
+$gray-400: #B5B8BC !default;
 $gray-500: #adb5bd !default;
 $gray-600: #6c757d !default;
 $gray-700: #495057 !default;
