--- a/src/app/apps/apps.component.scss
+++ b/src/app/apps/apps.component.scss
@@ -258,3 +258,7 @@
 //   border-radius: 10px;
 //   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 // }
+
+.dark-border {
+  border-color: $gray-400  !important;
+}
