--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members-search/user-group-members-search.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-members-search/user-group-members-search.component.html
@@ -18,14 +18,14 @@
                 </div>
             </ng-container>
             <ng-container *ngIf="!showLoader">
-                <div class="d-flex scrollable border rounded">
-                    <div class="list-group list-group-flush">
+                <div class="d-flex scrollable border rounded" style="flex-basis: 48%">
+                    <div class="list-group list-group-flush w-100">
                         <div class="list-group-item d-flex align-items-center bg-light-gray text-secondary">
                             <div class="user-check" (click)="selectAll=!selectAll">
                                 <odp-checkbox [edit]="{status:true}" [(checked)]="selectAll"></odp-checkbox>
                             </div>
                             <div class="user-name text-uppercase">Name</div>
-                            <div class="user-username text-uppercase">Username</div>
+                            <!-- <div class="user-username text-uppercase">Username</div> -->
                         </div>
                         <ng-container *ngIf="userList && userList.length>0">
                             <div class="list-group-item d-flex align-items-center " *ngFor="let user of userList"
@@ -34,8 +34,11 @@
                                     <odp-checkbox [edit]="{status:true}" [checked]="isUserSelected(user)"
                                         (checkedChange)="toggleUser($event,user)"></odp-checkbox>
                                 </div>
-                                <div class="user-name">{{user?.basicDetails?.name}}</div>
-                                <div class="user-username" [ngbTooltip]="user?._id">{{user?._id}}</div>
+                                <div class="d-flex flex-column">
+                                    <div class="user-name">{{user?.basicDetails?.name}}</div>
+                                    <div class="user-username font-13 text-secondary mt-1" [ngbTooltip]="user?._id">
+                                        {{user?._id}}</div>
+                                </div>
                             </div>
                         </ng-container>
                         <div *ngIf="!userList || userList.length==0" class="list-group-item d-flex align-items-center">
@@ -43,8 +46,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex scrollable border rounded ml-4">
-                    <div class="list-group list-group-flush">
+                <div class="d-flex scrollable border rounded" style="flex-basis: 48%">
+                    <div class="list-group list-group-flush w-100">
                         <div class="list-group-item d-flex align-items-center bg-light-gray text-secondary">
                             <div class="user-name text-uppercase">Name</div>
                             <div class="user-username text-uppercase">Username</div>
@@ -53,8 +56,12 @@
                         <ng-container *ngIf="selectedUsers && selectedUsers.length>0">
                             <div class="list-group-item d-flex align-items-center"
                                 *ngFor="let user of selectedUsers;let i=index">
-                                <div class="user-name">{{user?.basicDetails?.name}}</div>
-                                <div class="user-username" [ngbTooltip]="user?._id">{{user?._id}}</div>
+                                <div class="d-flex flex-column">
+                                    <div class="user-name">{{user?.basicDetails?.name}}</div>
+                                    <div class="user-username font-13 text-secondary mt-1" [ngbTooltip]="user?._id">
+                                        {{user?._id}}</div>
+                                </div>
+
                                 <div class="user-remove clearfix">
                                     <button type="button" class="btn btn-link py-0 float-right"
                                         (click)="removeSelectedUser(i)">
