--- a/src/app/home/schema-builder/schema-builder.component.html
+++ b/src/app/home/schema-builder/schema-builder.component.html
@@ -25,8 +25,9 @@
           (click)="enableEdit(true)" type="button" class="edit-button btn btn-min-width btn-primary" id="sbButtonEdit">
           <span class="text">Edit</span>
         </button>
-        <button *ngIf="edit.status && hasWritePermission" (click)="checkAndSave();edit.status=false" type="button" [disabled]="!canSchemaBeSaved"
-          class="edit-button btn btn-min-width btn-outline-primary mr-3" id="sbButtonSave">
+        <button *ngIf="edit.status && hasWritePermission" (click)="checkAndSave();edit.status=false" type="button"
+          [disabled]="!canSchemaBeSaved" class="edit-button btn btn-min-width btn-outline-primary mr-3"
+          id="sbButtonSave">
           <span class="text">Save</span>
         </button>
         <button *ngIf="edit.status && canSaveAndDeploy" [disabled]="!isValidSchema"
@@ -224,9 +225,10 @@
         </ng-container>
         <ng-container *ngIf="activeTab == 3">
           <div class="d-flex flex-column w-100">
-            <odp-manage-permissions #permissionsComponent [name]="name" [form]="form" [(role)]="role" [schemaFree]="isSchemaFree"
-              [(firstInit)]="manageRolesFirstInit" [(blockInvalidRole)]="blockInvalidRole" [definitions]="definitions"
-              [edit]="edit" (oldRoleReset)="onOldRoleReset($event)" [ngClass]="{'d-none':activeTab != 3}">
+            <odp-manage-permissions #permissionsComponent [name]="name" [form]="form" [(role)]="role"
+              [schemaFree]="isSchemaFree" [(firstInit)]="manageRolesFirstInit" [(blockInvalidRole)]="blockInvalidRole"
+              [definitions]="definitions" [edit]="edit" (oldRoleReset)="onOldRoleReset($event)"
+              [ngClass]="{'d-none':activeTab != 3}">
             </odp-manage-permissions>
           </div>
         </ng-container>
