--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -52,7 +52,7 @@
             </button>
           </div>
 
-          <div class="font-normal fw-400 sub-heading" (click)="appService.copyToClipboard(selectedBot?._id)">
+          <div class="font-normal fw-400 sub-heading" (click)="copyId()">
             <span>{{selectedBot?._id }}</span>
             <span class="hover dsi dsi-copy text-secondary ml-2"></span>
           </div>
